--- a/package.json
+++ b/package.json
@@ -1,20 +1,70 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "@baltic-robo/front",
+  "version": "1.0.0",
   "private": true,
+  "license": "MIT",
   "dependencies": {
     "react": "^16.6.3",
+    "react-app-polyfill": "^0.1.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb": "^17.1.0",
+    "husky": "^1.2.0",
+    "lint-staged": "^8.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "lint": "eslint src/**/*.{js,jsx}"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx}": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "airbnb",
+    "parser": "babel-eslint",
+    "plugins": [
+      "react"
+    ],
+    "rules": {
+      "linebreak-style": [
+        "error",
+        "unix"
+      ],
+      "indent": [
+        "error",
+        2
+      ],
+      "quotes": [
+        "error",
+        "single"
+      ],
+      "jsx-quotes": [
+        "error",
+        "prefer-single"
+      ],
+      "semi": [
+        "error",
+        "always"
+      ],
+      "arrow-parens": "off",
+      "comma-dangle": "off",
+      "implicit-arrow-linebreak": "off",
+      "function-paren-newline": "off"
+    },
+    "globals": {
+      "document": true
+    }
   },
   "browserslist": [
     ">0.2%",
