--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react": "^16.6.3",
     "react-app-polyfill": "^0.1.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-redux": "^5.1.1",
+    "react-scripts": "2.1.1",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^17.1.0",
